- CHG: 'Hide unrelated changed paths' now works across path 
       copies as well. (Stefan Fuhrmann)
- CHG: Log dialog much faster when showing 
       many revisions (Stefan Fuhrmann)
- CHG: The help window is started in a separate process (Stefan)
- CHG: Improved log window resizing logic (Owen Gibbins)
- CHG: Improved overlay icon display path filter (Stefan Fuhrmann)
- NEW: new command line params for the log dialog
       to set the filter. (Stefan)
- NEW: new autoclose setting for local operations only. (Stefan)
- NEW: the log dialog turns references to revisions
       into links. (Stefan)
- NEW: block access to the status cache when in protected mode in
       Internet explorer on Vista and later. (Stefan)
- NEW: More options in the commit dialog to check
       different items. (Stefan)
- NEW: Load/Save function in TortoiseUDiff. (Stefan)
- NEW: Force option for merges. (Stefan)
- NEW: In the log dialog, an error message can be cleared with
       a doubleclick to view the received log messages 
       up to the error. (Stefan)
- NEW: url handler for TSVN commands. (Stefan)
- NEW: column showing the file sizes in the 
       status list control. (Stefan)
- NEW: Command to repair copies. (Stefan)
- NEW: The diff command is available in the explorer context menu
       for folders with property modifications. (Stefan)
- NEW: Repository browser shows svn:externals 
       as sub-trees. (Stefan Fuhrmann)
- NEW: Edit files directly from repository browser (Stefan Fuhrmann)
- NEW: Improved filter in the log dialog. (Stefan, Stefan Fuhrmann)
- NEW: The state of the "hide unrelated changed paths" in the log
       dialog is remembered over sessions. (Stefan)
- NEW: TortoiseMerge disables the next/prev buttons if there are no
       next/previous diffs/conflicts. (Stefan)
- NEW: The TMerge open dialog remembers the merge/apply patch
       state of the radio button. (Stefan)
- NEW: When searching for a better path to apply a patch file,