@@ -331,6 +331,9 @@ BEGIN
     IDS_MENUREVISIONGRAPH   "Revision &graph"
     IDS_MENUDESCREVISIONGRAPH 
                             "Shows a graphical representation of copies/tags/branches"
+    IDS_MENUCLEANUPREFRESH  "Cleanup and refresh shell"
+    IDS_MENUDESCCLEANUPREFRESH 
+                            "Cleanup interrupted operations and refresh the shell overlays"
     IDS_MENUUNIGNORE        "Remove from &ignore list"
     IDS_MENUDESCUNIGNORE    "Removes the file or filemask from the list of ignored items"
 END
